--- a/app/src/main/res/drawable/selector_btn_back_gray.xml
+++ b/app/src/main/res/drawable/selector_btn_back_gray.xml
@@ -3,11 +3,9 @@
 
     <item android:state_pressed="true">
         <shape>
-            <corners android:radius="4dp"/>
-            <solid android:color="#ededed"/>
-            <stroke android:width="0.1dp" android:color="@color/base_text_color_light"
-                    android:dashWidth="1dp"
-                ></stroke>
+            <corners android:radius="4dp" />
+            <solid android:color="#ededed" />
+            <stroke android:width="0.1dp" android:color="@color/base_text_color_light" android:dashWidth="1dp"></stroke>
         </shape>
     </item>
 
