--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/btn_01"
+        android:id="@+id/btn"
         android:layout_width="50dp"
         android:layout_height="50dp"/>
 </LinearLayout>
