--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.Main2Activity">
 
     <Button
-        android:id="@+id/btn_01"
+        android:id="@+id/btn"
         android:layout_width="50dp"
-        android:layout_height="50dp"></Button>
+        android:layout_height="50dp" />
 
 </LinearLayout>
